[gd_scene load_steps=24 format=3 uid="uid://gtrv8sncgha3"]

[ext_resource type="Script" uid="uid://dppg6rvsnysxl" path="res://Scenes/main_menu.gd" id="1_8saeu"]
[ext_resource type="FontFile" uid="uid://coqjem14k2a1a" path="res://Assets/Menu Assets/bitcre.ttf" id="1_tt5f1"]
[ext_resource type="PackedScene" uid="uid://dtiwstgtu7qi8" path="res://Scenes/backgroundMainMenu.tscn" id="2_ghw46"]
[ext_resource type="FontFile" uid="uid://dq2hat0v08am4" path="res://Assets/Menu Assets/GrapeSoda.ttf" id="3_ghw46"]
[ext_resource type="AudioStream" uid="uid://fgqy3e7ouwll" path="res://Assets/Audio/ElevatorMusic.wav" id="5_df05h"]
[ext_resource type="Script" uid="uid://bltwmlhbkw7p7" path="res://Scenes/music.gd" id="6_8um5k"]
[ext_resource type="Script" uid="uid://w3hv0fn1hgu4" path="res://Scenes/screen_type.gd" id="7_xim88"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_df05h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8um5k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xim88"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_koqhg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cmrfp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_loo7a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_if7li"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rrcx7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fh7cp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8e205"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7467j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2x1g0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ghw46"]
bg_color = Color(0.8851836, 0.88375986, 0.7570062, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.58336383, 0.42653626, 0.17271137, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8um5k"]
color = Color(1, 1, 1, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_xim88"]
color = Color(0, 0.18371174, 0.9999891, 1)
thickness = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_riqfo"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8saeu")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_df05h")
autoplay = true
bus = &"Music"

[node name="Background" parent="." instance=ExtResource("2_ghw46")]
position = Vector2(317, -19)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_df05h")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -260.0
offset_right = 383.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("1_tt5f1")
theme_override_font_sizes/font_size = 100
text = "Monster Rush"

[node name="Main Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.5
offset_top = -56.0
offset_right = 165.5
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14

[node name="Start" type="Button" parent="Main Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.9185448, 0.9029508, 2.3102762e-06, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.9999985, 0.9963048, 0.5044029, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_ghw46")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = SubResource("StyleBoxEmpty_8um5k")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_xim88")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_koqhg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_cmrfp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_loo7a")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_if7li")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_rrcx7")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_fh7cp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8e205")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_7467j")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2x1g0")
text = "Start Run
"

[node name="Options" type="Button" parent="Main Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.9185448, 0.9029508, 2.3102762e-06, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.9999985, 0.9963048, 0.5044029, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_ghw46")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = SubResource("StyleBoxEmpty_8um5k")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_xim88")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_koqhg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_cmrfp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_loo7a")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_if7li")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_rrcx7")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_fh7cp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8e205")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_7467j")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2x1g0")
text = "Options"

[node name="Exit" type="Button" parent="Main Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.9185448, 0.9029508, 2.3102762e-06, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.9999985, 0.9963048, 0.5044029, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_ghw46")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = SubResource("StyleBoxEmpty_8um5k")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_xim88")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_koqhg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_cmrfp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_loo7a")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_if7li")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_rrcx7")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_fh7cp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8e205")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_7467j")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2x1g0")
text = "Exit
"

[node name="Options Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -471.375
offset_top = -307.28125
offset_right = 471.375
offset_bottom = 307.28125
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ghw46")

[node name="Options" type="Label" parent="Options Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_top = 11.28125
offset_right = 180.0
offset_bottom = 111.28125
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("1_tt5f1")
theme_override_font_sizes/font_size = 100
text = "Options"

[node name="Close" type="Button" parent="Options Panel"]
layout_mode = 0
offset_left = 825.375
offset_top = 0.28125
offset_right = 974.75
offset_bottom = 97.5625
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.82160705, 0.1560544, 0.31439844, 1)
theme_override_colors/font_pressed_color = Color(0.7099704, 0.1722551, 0.24244675, 1)
theme_override_colors/font_hover_color = Color(1, 0.21176471, 0.5058824, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_ghw46")
theme_override_font_sizes/font_size = 93
theme_override_styles/normal = SubResource("StyleBoxEmpty_8um5k")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_xim88")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_koqhg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_cmrfp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_loo7a")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_if7li")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_rrcx7")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_fh7cp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8e205")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_7467j")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2x1g0")
text = "X
"

[node name="MusicS" type="HSlider" parent="Options Panel"]
layout_mode = 0
offset_left = 395.375
offset_top = 171.28125
offset_right = 870.375
offset_bottom = 278.28125
theme_override_constants/center_grabber = 0
theme_override_constants/grabber_offset = 0
theme_override_constants/tick_offset = 0
theme_override_styles/slider = SubResource("StyleBoxLine_8um5k")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_xim88")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_xim88")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("6_8um5k")
audio_bus_name = "Music"

[node name="MusicT" type="Label" parent="Options Panel"]
layout_mode = 0
offset_left = 68.375
offset_top = 199.28125
offset_right = 334.375
offset_bottom = 250.28125
theme_override_colors/font_color = Color(0.91764706, 0.9019608, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("3_ghw46")
theme_override_font_sizes/font_size = 50
text = "Music Volume"

[node name="SFXS" type="HSlider" parent="Options Panel"]
layout_mode = 0
offset_left = 394.375
offset_top = 237.28125
offset_right = 874.375
offset_bottom = 344.28125
theme_override_constants/center_grabber = 0
theme_override_constants/grabber_offset = 0
theme_override_constants/tick_offset = 0
theme_override_styles/slider = SubResource("StyleBoxLine_8um5k")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_xim88")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_xim88")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("6_8um5k")
audio_bus_name = "SFX"

[node name="SFXT" type="Label" parent="Options Panel"]
layout_mode = 0
offset_left = 82.375
offset_top = 262.28125
offset_right = 348.375
offset_bottom = 313.28125
theme_override_colors/font_color = Color(0.91764706, 0.9019608, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("3_ghw46")
theme_override_font_sizes/font_size = 50
text = "SFX Volume"

[node name="ScreenType" type="CheckButton" parent="Options Panel"]
layout_mode = 0
offset_left = 81.375
offset_top = 325.28125
offset_right = 446.375
offset_bottom = 384.28125
theme_override_colors/font_color = Color(0.91764706, 0.9019608, 0, 1)
theme_override_colors/font_focus_color = Color(0.91764706, 0.9019608, 0, 1)
theme_override_colors/font_pressed_color = Color(0.91764706, 0.9019608, 0, 1)
theme_override_colors/font_hover_color = Color(0.91764706, 0.9019608, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.91764706, 0.9019608, 0, 1)
theme_override_colors/font_disabled_color = Color(0.91764706, 0.9019608, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(0.89492244, 0.89492244, 0.8949224, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0.4)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("3_ghw46")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_riqfo")
theme_override_colors/button_checked_color = Color(1, 1, 1, 1)
theme_override_colors/button_unchecked_color = Color(1, 1, 1, 1)
button_pressed = true
text = "Windowed"
script = ExtResource("7_xim88")

[connection signal="pressed" from="Main Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Main Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main Buttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options Panel/Close" to="." method="_on_close_pressed"]
[connection signal="value_changed" from="Options Panel/MusicS" to="Options Panel/MusicS" method="_on_value_changed"]
[connection signal="value_changed" from="Options Panel/SFXS" to="Options Panel/SFXS" method="_on_value_changed"]
[connection signal="toggled" from="Options Panel/ScreenType" to="Options Panel/ScreenType" method="_on_toggled"]
